--- a/src/styles/src/Main.scss
+++ b/src/styles/src/Main.scss
@@ -3,33 +3,156 @@
 
 /* #viewBox - laptop, desktop */ 
 #viewBox {
-  .dr_jart_box {
-    width: 100%;
-    height: 100vh;
-    padding-top: 80px;
-    background-color: #2571E5;
-    .slider {}
+  padding-top: 80px;
+  
+  .bgblack{
+    position: absolute;
+    z-index: 999;
+    width: 100vw;
+    height: 410.5vh;
+    left: 0px;
+    top: 0px;
+    background: rgba(0, 0, 0, 0.25);
   }
+
+  .Left_button{
+    img{
+      position: absolute;
+      bottom:20%; left:38%;
+      width:25px;
+      height:40px;
+      z-index: 1000;
+      filter: drop-shadow(15px 15px 4px rgba(0, 0, 0, 0.3));
+    }
+  }
+  
+  .Right_button{
+    img{
+      position: absolute;
+      bottom:20%; right:38%;
+      width:25px;
+      height:40px;
+      z-index: 1000;
+      filter: drop-shadow(15px 15px 4px rgba(0, 0, 0, 0.3));
+      }
+    }
+  
+    .slide_anim{
+    opacity: 1;
+    transition: opacity ease-in-out 1.5s;
+    }
+  
+    .slide_none{
+    opacity: 0;
+  
+    }
+  
+    .dots{
+
+    position: absolute;
+    bottom:22%; right:44.5%;
+    display: flex;
+    z-index: 1000;
+    filter: drop-shadow(15px 15px 4px rgba(0, 0, 0, 0.3));
+  
+      .filldot{
+          width:15px; height: 15px;
+          background-color: white;
+          border-radius:50%;
+          box-sizing: border-box;
+          z-index:1000;
+          margin-right:1em;
+        }
+
+      .emptydot{
+        width:15px; height: 15px;
+        border:2.3px solid #FFFFFF;
+        border-radius:50%;
+        box-sizing: border-box;
+        z-index:1000;
+        margin-right:1em;
+        }
+      
+  } 
+
+  .dr_jart_box {
+    position: relative;
+    width:100vw;
+    height: 100vh;
+    // padding-top: 80px;
+  
+
+    .slider {
+      .DrJart_slide{
+     
+        img{
+          position: absolute;
+          width:100vw;
+          height:100vh;
+          
+          }
+        }
+      
+    
+      }
+  }
+
   .innisfree_box {
+    position: relative;
     width: 100%;
     height: 100vh;
-    background-color: #4960D7;
-    .slider {}
+      .slider {
+        .Innisfree_slide{
+       
+          img{
+            position: absolute;
+            width:100vw;
+            height:100vh;
+            
+            }
+          }
+       
+    }
   }
   .seedmool_box {
+    position: relative;
     width: 100%;
     height: 100vh;
-    background-color: #9A8976;
-    .slider {}
+  
+    .slider {
+      .Seedmool_slide{
+     
+        img{
+          position: absolute;
+          width:100vw;
+          height:100vh;
+          
+          }
+        }
+    
+    }
   }
   .beplain_box {
+    position: relative;
     width: 100%;
     height: 100vh;
-    background-color: #C84861;
-    .slider {}
+    
+    .slider {
+      .Beplain_slide{
+     
+        img{
+          position: absolute;
+          width:100vw;
+          height:100vh;
+          
+          }
+        }
+   
+     }
   }
   .skin_type_test_btn {
     position: fixed;
+    z-index: 9999;
     left: 50%;
     transform: translate(-50%, 320%);
     width: 400px;
@@ -50,6 +173,7 @@
     }
   }
 }
+
 
 
 
