--- a/src/styles/src/SkinTypeTest.scss
+++ b/src/styles/src/SkinTypeTest.scss
@@ -428,7 +428,7 @@
         justify-content: center;
         padding: 0;
         margin: 30px 0;
-        // margin-bottom: 65px;
+        margin-bottom: 50px;
         // background-color: #ff1;
         .test_result_badge {
           width: 70px;
