--- a/src/styles/src/Footer.scss
+++ b/src/styles/src/Footer.scss
@@ -26,5 +26,19 @@
 
 /* #footBox - tablet */ 
 @include tablet { 
-  #footBox {}
+  #footBox {
+    position: relative;
+    width: 100%;
+    height: 80px;
+    color: $white;
+    background-color: $dark-gray; 
+    address {
+      position: absolute;
+      left:43%;
+      font-weight: 400;
+      font-size: 20px;
+      color: $white;
+      line-height: 80px;
+    }
+  }
 }
