--- a/src/styles/src/Main.scss
+++ b/src/styles/src/Main.scss
@@ -3,7 +3,7 @@
 
 /* #viewBox - laptop, desktop */ 
 #viewBox {
-  padding-top: 80px;
+  // padding-top: 80px;
   
   // 불투명한 막 
   .bgblack{
@@ -16,50 +16,46 @@
     background: rgba(0, 0, 0, 0.25);
   }// 불투명한 막 
 
-
+  
   // e.g. 마지막 인디케이터 묶음! 
-  // .indicator_group:last-child {
-  //   bottom:10%; left:38%;
-  // }
+  .indicator {
+    bottom:10%; left:38%;
+  }
   // 인디케이터 
-  .Left_button{
+  .Indicator{
+    position: absolute;
+    bottom:15%; left:45%;
+    
+ 
+    .Left_button{
     img{
       position: absolute;
-      bottom:20%; left:38%;
+      bottom:-20%; left:-49%;
       width:25px;
       height:40px;
-      z-index: 1000;
+      z-index: 99;
       filter: drop-shadow(15px 15px 4px rgba(0, 0, 0, 0.3));
     }
-  }
+      }
   
-  .Right_button{
+    .Right_button{
+
     img{
       position: absolute;
-      bottom:20%; right:38%;
+      bottom:-20%; right:-43%;
       width:25px;
       height:40px;
-      z-index: 1000;
+      z-index: 99;
       filter: drop-shadow(15px 15px 4px rgba(0, 0, 0, 0.3));
       }
     }
   
-    .slide_anim{
-    opacity: 1;
-    transition: opacity ease-in-out 1.5s;
-    }
-  
-    .slide_none{
-    opacity: 0;
-  
-    }
-  
     .dots{
 
-    position: absolute;
+    // position: absolute;
     bottom:22%; right:44.5%;
     display: flex;
-    z-index: 1000;
+    z-index: 99;
     filter: drop-shadow(15px 15px 4px rgba(0, 0, 0, 0.3));
   
       .filldot{
@@ -80,7 +76,20 @@
         margin-right:1em;
         }
       
-  }// 인디케이터
+      }
+      
+      // 인디케이터
+    }
+ 
+  .slide_anim{
+        opacity: 1;
+        transition: opacity ease-in-out 1.5s;
+      }
+
+  .slide_none{
+    opacity: 0;
+      }
+        
 
   // 슬라이더들
   .dr_jart_box {
@@ -89,10 +98,10 @@
     height: 100vh;
     // padding-top: 80px;
   
+  
     .slider {
       .DrJart_slide{
-     
-        img{
+      img{
           position: absolute;
           width:100vw;
           height:100vh;
@@ -167,7 +176,7 @@
   .skin_type_test_btn {
     position: fixed;
     z-index: 9999;
-    left: 50%;
+    top:10%; left: 50%;
     transform: translate(-50%, 320%);
     width: 400px;
     height: 110px;
@@ -193,12 +202,103 @@
 
 /* #viewBox - mobile */ 
 @include mobile { 
-  #viewBox {}
+  #viewBox {
+    .skin_type_test_btn {
+      position: fixed;
+      z-index: 999;
+      top:10%; left: 52%;
+      transform: translate(-50%, 320%);
+      width: 400px;
+      height: 110px;
+      border: 5px solid $white;
+      box-sizing: border-box;
+      filter: drop-shadow(15px 15px 4px rgba(0, 0, 0, 0.3));
+      border-radius: 30px;
+      text-align: center;
+      line-height: 110px;
+      }
+
+    .Indicator{
+        position: absolute;
+        bottom:15%; left:40%;
+  
+    .Left_button{
+
+        img{
+          position: absolute;
+          bottom:-20%; left:-55%;
+          width:25px;
+          height:40px;
+          z-index: 99;
+          filter: drop-shadow(15px 15px 4px rgba(0, 0, 0, 0.3));
+        }
+          }
+      
+        .Right_button{
+    
+        img{
+          position: absolute;
+          bottom:-20%; right:-30%;
+          width:25px;
+          height:40px;
+          z-index: 99;
+          filter: drop-shadow(15px 15px 4px rgba(0, 0, 0, 0.3));
+          }
+        }
+      
+        .dots{
+    
+        // position: absolute;
+        bottom:22%; right:43%;
+        display: flex;
+        z-index: 99;
+        filter: drop-shadow(15px 15px 4px rgba(0, 0, 0, 0.3));
+      
+          .filldot{
+              width:15px; height: 15px;
+              background-color: white;
+              border-radius:50%;
+              box-sizing: border-box;
+              z-index:1000;
+              margin-right:1em;
+            }
+    
+          .emptydot{
+            width:15px; height: 15px;
+            border:2.3px solid #FFFFFF;
+            border-radius:50%;
+            box-sizing: border-box;
+            z-index:1000;
+            margin-right:1em;
+            }
+          
+          }
+          
+          // 인디케이터
+        }
+  }
 }
 
 
 
 /* #viewBox - tablet */ 
 @include tablet { 
-  #viewBox {}
+  #viewBox {
+     
+    .skin_type_test_btn {
+      position: fixed;
+      z-index: 999;
+      top:10%; left: 52%;
+      transform: translate(-50%, 320%);
+      width: 400px;
+      height: 110px;
+      border: 5px solid $white;
+      box-sizing: border-box;
+      filter: drop-shadow(15px 15px 4px rgba(0, 0, 0, 0.3));
+      border-radius: 30px;
+      text-align: center;
+      line-height: 110px;
+      }
+    
+  }
 }
