[Add]MyCart.js: layout done

--- a/src/styles/src/Card.scss
+++ b/src/styles/src/Card.scss
@@ -96,6 +96,22 @@
       span:nth-child(2) {
         color: $white;
       }
+    }// .go_to_shopping_btn
+
+    .to_favorite_item {
+      position: absolute;
+      top: 15px;
+      right: 15px;
+      z-index: 100;
+      width: 50px;
+      height: 50px;
+      background-image: url("../../assets/img/common/to_favorite_item.png");
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: contain;
+    }// .to_favorite_item
+    .to_favorite_item.in_cart {
+      background-image: url("../../assets/img/common/cancel_favorite_item.png");
     }
   }
 }
@@ -135,8 +151,16 @@
         // .cart_icon {}
         // span:nth-child(2) {}
       }
+
+      .to_favorite_item {
+        width: 40px;
+        height: 40px;
+      }// .to_favorite_item
     }
   }
+}
+.card:hover {
+  cursor: pointer;
 }
 
 /* mobile */ 
@@ -174,6 +198,11 @@
         // .cart_icon {}
         // span:nth-child(2) {}
       }
+
+      .to_favorite_item {
+        width: 40px;
+        height: 40px;
+      }// .to_favorite_item
     }
   }
 }
