--- a/src/styles/src/Main.scss
+++ b/src/styles/src/Main.scss
@@ -130,13 +130,13 @@
   }// .innisfree_box
 
 
-  .seedmool_box {
+  .sidmool_box {
     position: relative;
     width: 100%;
     height: 100vh;
   
     .slider {
-      .Seedmool_slide{
+      .Sidmool_slide{
      
         img{
           position: absolute;
