--- a/src/styles/src/LoginSignup.scss
+++ b/src/styles/src/LoginSignup.scss
@@ -4,11 +4,12 @@
   position: relative;
   width:100vw;
   height:100vh;
+  margin-bottom:70px;
 
   .LoginSignup_bind{ 
     position: absolute;
     margin-top: 20px;
-    // margin-bottom:100px;
+    margin:0 auto;
     top:15%; 
     width:100vw;
     height:570px;
@@ -17,14 +18,15 @@
   .taps{
     display: flex;
     position: absolute;
-    top:0%; left:27%;
+    top:0%; left:28%;
     z-index: 99;
 
   .tap_active{
     width:150px; 
     height:70px;
     background-color:$dark-gray;
-    border-radius:15px;
+    border-top-right-radius:15px;
+    border-top-left-radius:15px;
     text-align: center;
     font:20px/65px "나눔고딕",sans-serif;
     color: #fff;
@@ -34,7 +36,9 @@
     width:150px;
     height:70px;
     background-color:rgb(236, 236, 236);
-    border-radius:15px;
+    border-top-right-radius:15px;
+    border-top-left-radius:15px;
+    // border-bottom-left-radius:15px;
     text-align: center;
     font:20px/65px "나눔고딕",sans-serif;
     cursor: pointer;
@@ -279,29 +283,312 @@
 
   .Content_none{
     display: none;
-  }
+    }
   }
 }
 
 @include mobile{
-  #LoginSignup_wrap{
-    position: relative;
-    width:100vw;
-    height:100vh;
-  
-  
-    .Login_box{
 
-      position: absolute;
-      top:9.3%; left:27%;
-      width:750px;
+#LoginSignup_wrap{
+
+  .LoginSignup_bind{ 
+    display: block;
+    // position: absolute;
+    top:15%; left:-11%;
+    justify-content: space-between;
+    margin:0 auto;
+    // width:100vw;
+    height:570px;
+    filter: drop-shadow(15px 15px 4px rgba(0, 0, 0, 0.3));
+
+  .taps{
+    display: flex;
+    position: absolute;
+    top:30px; 
+    width:380px; height:70px;
+    left:29%;
+    z-index: 99;
+
+  .tap_active{
+    width:140px; 
+    height:70px;
+    background-color:$dark-gray;
+    border-top-right-radius:15px;
+    border-top-left-radius:15px;
+    text-align: center;
+    font:20px/65px "나눔고딕",sans-serif;
+    color: #fff;
+    }
+
+    .tap_none{
+    width:140px;
+    height:70px;
+    background-color:rgb(236, 236, 236);
+    border-top-right-radius:15px;
+    border-top-left-radius:15px;
+    // border-bottom-left-radius:15px;
+    text-align: center;
+    font:20px/65px "나눔고딕",sans-serif;
+    cursor: pointer;
+  }
+  }
+
+  .Login_box{
+    position: absolute;
+    display: block;
+    top:17.6%; 
+    width:350px;
+    height:500px;
+    margin:0 auto;
+    box-sizing: border-box;
+    background-color:rgb(236, 236, 236);
+    border-radius:15px;
+
+    form{
+      padding-top:90px;
+      width:500px;
+      margin:0 auto;
       height:500px;
-      box-sizing: border-box;
-      background-color: $light-gray-2;
+      .Login_Id_box{
+        margin-left:15px;
+        width:320px;
+        height:70px;
+        background-color:rgb(156, 156, 156);
+        display: flex;
+        margin-bottom: 20px;
+        border-radius:15px;
+        img{
+          margin-left: 20px;
+          margin-top:-10px;
+          width:42px;
+          height:42px;
+        }
+        input{
+        padding-left:10px;
+        padding-top: 5px;
+        outline:none;
+        border:none;
+        background-color:rgb(156, 156, 156);
+        cursor: pointer;
+        }
+        input::placeholder{
+          // color:white;
+          font-size:17px;
+        }
+      }
+      .Pw_Id_box{
+        padding-top: 20px;
+        margin-left:15px;
+        width:320px;
+        height:70px;
+        background-color:rgb(156, 156, 156);
+        display: flex;
+        border-radius:15px;
+        img{
+          width:45px;
+          height:45px;
+          margin-left:10px;
+          margin-top:-10px;
+        }
+        input{
+        padding-top: 11px;
+        padding-left:5px;
+        width:200px;
+        outline:none;
+        border:none;
+        background-color:rgb(156, 156, 156);
+        cursor: pointer;
+        }
+        input::placeholder{
+          // color:white;
+          font-size:17px;
+        }
+      }
+      .Login_button{
+        position: absolute;
+        left:210px;
+        padding-top:80px;
+        input{
+          width:100px;
+          height:60px;
+          margin:0 auto;
+          outline:none;
+          border:none;
+          background-color:rgb(156, 156, 156);
+          font:20px/60px "나눔고딕",sans-serif;
+          border-radius:15px;
+          cursor: pointer;
+          }
+
+          input:hover{
+            background-color:$dark-gray;
+            color: #fff;
+          }
+          
+
+      }
+  
+    }
+
+  }
+
+  .Signup_box{
+    position: absolute;
+    top:17.6%; 
+    width:350px;
+    height:500px;
+    box-sizing: border-box;
+    background-color:rgb(236, 236, 236);
+    border-radius:15px;
+    form{
+      padding-top:50px;
+      width:570px;
+      margin:0 auto;
+      // height:600px;
+
+      .first_bundle{
+        display: block;
+        li{
+          position: absolute;
+          margin-left:20px;
+          top:-50px;
+          width:300px;
+          height:60px;
+          margin-top: 20px;
+          background-color:rgb(156, 156, 156);
+          border-radius:15px;
+          img{
+            margin-left:10px;
+          }
+          input{
+            cursor: pointer;
+          }
+
+        }
+        .Name_box{
+          position: relative;
+          margin-right:50px;
+          input{
+            position: absolute;
+            margin-top:22px;
+            margin-left:10px;  ; 
+            outline:none;
+            border:none;
+            background-color:rgb(156, 156, 156)     
+          }
+          img{
+            margin-top:6px;
+            width:50px;
+            height:50px;
+            }
+          }
+
+        .gender_box{
+          position: relative;
+          display: flex;
+          padding-top:10px;
+    
+      
+          input{
+            width:30px;
+            height:30px;
+          }
+          .man_box{
+            position: absolute;
+            left:40px;
+            img{
+              width:47px;
+              height:47px;
+            }
+          }
+          .woman_box{
+            position: absolute;
+            left:140px;
+            input{
+              margin-left:-15px;
+            }
+            img{
+              width:45px;
+              height:45px;
+            }
+          }
+
+
+        }
+      
+      }
+
+      .second_bundle{
+        display: block;
+        position: relative;
+        margin-top:-45px;
+
+        li{
+          margin-left:20px;
+          width:300px;
+          height:60px;
+          background-color:rgb(156, 156, 156);
+          border-radius: 15px;
+          margin-top: 20px;
+
+        }
+
+        input{
+          position:absolute;
+          outline:none;
+          border:none;
+          background-color:rgb(156, 156, 156);
+          margin-top:23px;
+          margin-left:10px;
+          cursor: pointer;
+        }
+        img{
+          margin-top:10px;
+          margin-left:10px;
+          width:42px;
+          height:42px;
+        }
+
+        .signup_tel_box{
+          img{
+            margin-top:12px;
+            width:40px;
+            height:40px;
+          }
+        }
+
+      
+      }
+
+      .signup_button{
+        position: absolute;
+        margin-top: 15px;
+        margin-left: 210px;
+        input{
+        width:100px;
+        height:50px;
+        outline:none;
+        border:none;
+        background-color:rgb(156, 156, 156);
+        font:20px "나눔고딕",sans-serif;
+        border-radius:15px;
+        cursor: pointer;
+        }
+        input:hover{
+          background-color:$dark-gray;
+          color: #fff;
+        }
+      }
+
 
     }
   }
 
+  .Content_none{
+    display: none;
+    }
+  }
+}
 }
 
 @include tablet{
@@ -310,16 +597,287 @@
     position: relative;
     width:100vw;
     height:100vh;
+    margin-bottom:70px;
   
+    .LoginSignup_bind{ 
+      position: absolute;
+      margin-top: 20px;
+      top:15%; 
+      width:100vw;
+      height:570px;
+      filter: drop-shadow(15px 15px 4px rgba(0, 0, 0, 0.3));
+  
+    .taps{
+      display: flex;
+      position: absolute;
+      top:0%; left:23%;
+      z-index: 99;
+  
+    .tap_active{
+      width:150px; 
+      height:70px;
+      background-color:$dark-gray;
+      border-top-right-radius:15px;
+      border-top-left-radius:15px;
+      text-align: center;
+      font:20px/65px "나눔고딕",sans-serif;
+      color: #fff;
+      }
+  
+      .tap_none{
+      width:150px;
+      height:70px;
+      background-color:rgb(236, 236, 236);
+      border-top-right-radius:15px;
+      border-top-left-radius:15px;
+      // border-bottom-left-radius:15px;
+      text-align: center;
+      font:20px/65px "나눔고딕",sans-serif;
+      cursor: pointer;
+    }
+    }
   
     .Login_box{
       position: absolute;
-      top:9.3%; left:27%;
-      width:750px;
+      top:12.3%; left:22%;
+      width:650px;
       height:500px;
       box-sizing: border-box;
-      background-color: $light-gray-2;
+      background-color:rgb(236, 236, 236);
+      border-radius:15px;
+  
+      form{
+        padding-top:90px;
+        width:500px;
+        margin:0 auto;
+        height:500px;
+        .Login_Id_box{
+          padding-top: 25px;
+          width:500px;
+          height: 100px;
+          background-color:rgb(156, 156, 156);
+          display: flex;
+          margin-bottom: 20px;
+          border-radius:15px;
+          img{
+            margin-left: 20px;
+          }
+          input{
+          padding-left: 10px;
+          padding-top: 20px;
+          outline:none;
+          border:none;
+          background-color:rgb(156, 156, 156);
+          cursor: pointer;
+          }
+          input::placeholder{
+            // color:white;
+            font-size:17px;
+          }
+        }
+        .Pw_Id_box{
+          padding-left: 10px;
+          padding-top: 20px;
+          width:500px;
+          height: 100px;
+          background-color:rgb(156, 156, 156);
+          display: flex;
+          border-radius:15px;
+          img{
+            margin-left:10px;
+          }
+          input{
+          padding-top: 23px;
+          padding-left:5px;
+          width:300px;
+          outline:none;
+          border:none;
+          background-color:rgb(156, 156, 156);
+          cursor: pointer;
+          }
+          input::placeholder{
+            // color:white;
+            font-size:17px;
+          }
+        }
+        .Login_button{
+          float:right;
+          padding-top: 20px;
+          input{
+            width:100px;
+            height:80px;
+            margin:0 auto;
+            outline:none;
+            border:none;
+            background-color:rgb(156, 156, 156);
+            font:20px/65px "나눔고딕",sans-serif;
+            border-radius:15px;
+            cursor: pointer;
+            }
+  
+            input:hover{
+              background-color:$dark-gray;
+              color: #fff;
+            }
+            
+  
+        }
+    
+      }
+  
+    }
+  
+    .Signup_box{
+      position: absolute;
+      top:12.3%; left:22%;
+      width:650px;
+      height:500px;
+      box-sizing: border-box;
+      background-color:rgb(236, 236, 236);
+      border-radius:15px;
+  
+      form{
+        padding-top:50px;
+        width:570px;
+        margin:0 auto;
+        // height:600px;
+  
+        .first_bundle{
+          display: flex;
+          li{
+            position: relative;
+            width:260px;
+            height:70px;
+            background-color:rgb(156, 156, 156);
+            border-radius:15px;
+            img{
+              margin-left:10px;
+            }
+            input{
+              cursor: pointer;
+            }
+  
+          }
+          .Name_box{
+            position: relative;
+            margin-right:50px;
+            input{
+              position: absolute;
+              margin-top:24px;
+              margin-left:10px;  ; 
+              outline:none;
+              border:none;
+              background-color:rgb(156, 156, 156)     
+            }
+            img{
+              margin-top:9px;
+              width:50px;
+              height:50px;
+              }
+            }
+  
+          .gender_box{
+            position: relative;
+            display: flex;
+            padding-top:10px;
+        
+            input{
+              width:30px;
+              height:30px;
+            }
+            .man_box{
+              position: absolute;
+              left:20px;
+              img{
+                width:47px;
+                height:47px;
+              }
+            }
+            .woman_box{
+              position: absolute;
+              left:120px;
+              input{
+                margin-left:-15px;
+              }
+              img{
+                width:45px;
+                height:45px;
+              }
+            }
+  
+  
+          }
+        
+        }
+  
+        .second_bundle{
+          display: block;
+          position: relative;
+  
+          li{
+            width:570px;
+            height:70px;
+            background-color:rgb(156, 156, 156);
+            border-radius: 15px;
+            margin-top: 20px;
+  
+          }
+  
+          input{
+            position:absolute;
+            outline:none;
+            border:none;
+            background-color:rgb(156, 156, 156);
+            margin-top:25px;
+            margin-left:10px;
+            cursor: pointer;
+          }
+          img{
+            margin-top:10px;
+            margin-left:10px;
+            width:42px;
+            height:42px;
+          }
+  
+          .signup_tel_box{
+            img{
+              margin-top:15px;
+              width:40px;
+              height:40px;
+            }
+          }
+  
+        
+        }
+  
+        .signup_button{
+          float: right;
+          margin-top: 15px;
+          input{
+          width:100px;
+          height:50px;
+          outline:none;
+          border:none;
+          background-color:rgb(156, 156, 156);
+          font:20px "나눔고딕",sans-serif;
+          border-radius:15px;
+          cursor: pointer;
+          }
+          input:hover{
+            background-color:$dark-gray;
+            color: #fff;
+          }
+        }
+  
+  
+      }
+    }
+  
+    .Content_none{
+      display: none;
+      }
     }
   }
+  
 
 }
