--- a/src/styles/src/Header.scss
+++ b/src/styles/src/Header.scss
@@ -11,6 +11,7 @@
   height: 80px;
   background-color: $white2;
   // background-color: #ea1;
+  border-bottom: 0.8px solid rgba(0, 0, 0, 0.3);
   .navigation {
     display: flex;
 
@@ -33,9 +34,13 @@
         width: 200px;
         padding: 10px 15px;
         box-sizing: border-box;
+    
+    
+        // transition: width .3s ease;
         // background-color: #ae1;
         // outline: 1px solid #333;
         a {
+          position: relative;
           display: block;
           width: 100%;
           text-align: center;
@@ -47,6 +52,21 @@
           text-shadow: 7px 9px 4px rgba(0, 0, 0, 0.2);
           // background-color: #eea;
         }
+        a:after{
+          position: absolute;
+          content:"";
+          background-color: rgba(0, 0, 0, 0.6);
+          height:5px;
+          width:0;
+          left:0;
+          bottom:-4px ;
+          transition:0.7s;
+          margin-left: 20px;
+        }
+        a:hover:after{
+          width:80%;
+       
+        }
       }
     }
 
@@ -54,13 +74,13 @@
       position: absolute;
       right:150px; top:20px;
       width:42px; height:42px;
-      // filter: drop-shadow(15px 15px 4px rgba(0, 0, 0, 0.3));
+      filter: drop-shadow(4px 4px 1px rgba(0, 0, 0, 0.1));
     }
     .desktop_cart_img{
       position: absolute;
       right:97px; top:20px;
       width:42px; height:42px;
-      // filter: drop-shadow(15px 15px 4px rgba(0, 0, 0, 0.3));
+      filter: drop-shadow(4px 4px 1px rgba(0, 0, 0, 0.1));
     }
     
     .desktop_home_img{
@@ -157,8 +177,8 @@
 
         .openbutton{
           position:absolute;
-          width: 60px;
-          height: 60px;
+          width: 55px;
+          height: 55px;
           top:11%; right:5%;
           }
         .log_img{
