[Feat] add alert message when all items are displayed

--- a/src/styles/src/Card.scss
+++ b/src/styles/src/Card.scss
@@ -11,8 +11,10 @@
   background-color: $light-gray_2;
   box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.25);
   border-radius: 5px;
+  // background-color: #13a;
   .card_detail_part {
     // transition: all ease 1s;
+    // background: #413;
     .item_img {
       height: 200px;
       margin: auto;
