[Add] Main.scss: when hover to skin type test button - transform: scale(1.1) and transition added

--- a/src/styles/src/Header.scss
+++ b/src/styles/src/Header.scss
@@ -60,6 +60,7 @@
           width:0;
           left:0;
           bottom:-4px ;
+          border-radius: 2px;
           transition:0.7s;
           margin-left: 20px;
         }
