--- a/src/styles/src/Header.scss
+++ b/src/styles/src/Header.scss
@@ -12,9 +12,9 @@
   background-color: $white2;
   // background-color: #ea1;
   border-bottom: 0.8px solid rgba(0, 0, 0, 0.3);
+  // h1 {}
   .navigation {
     display: flex;
-
     .nav_open_btn {
       display: none;
     }
@@ -29,16 +29,10 @@
       justify-content: space-between;
       list-style: none;
       // background-color: red;
-      
       li {
         width: 200px;
         padding: 10px 15px;
         box-sizing: border-box;
-    
-    
-        // transition: width .3s ease;
-        // background-color: #ae1;
-        // outline: 1px solid #333;
         a {
           position: relative;
           display: block;
@@ -62,95 +56,78 @@
           bottom:-4px ;
           transition:0.7s;
           margin-left: 20px;
+          border-radius:5px;
         }
         a:hover:after{
           width:80%;
-       
+          border-radius:5px;
         }
       }
+     
+ 
+
     }
 
-    .desktop_log_img{
-      position: absolute;
-      right:150px; top:20px;
-      width:42px; height:42px;
-      filter: drop-shadow(4px 4px 1px rgba(0, 0, 0, 0.1));
-    }
-    .desktop_cart_img{
-      position: absolute;
-      right:97px; top:20px;
-      width:42px; height:42px;
-      filter: drop-shadow(4px 4px 1px rgba(0, 0, 0, 0.1));
-    }
-    
     .desktop_home_img{
       position: absolute;
       right:40px; top:20px;
       width:42px; height:42px;
     }
+          // 홈버튼 따로 
+    .unb {
+            position: absolute;
+            right:90px; top:20px;
+          
+            .desktop_log_img{
+            
+              width:45px; height:45px;
+              filter: drop-shadow(4px 4px 1px rgba(0, 0, 0, 0.1));
+            }
+            .desktop_cart_img{
+              // position: absolute;
+              // right:97px; top:20px;
+              width:45px; height:45px;
+              filter: drop-shadow(4px 4px 1px rgba(0, 0, 0, 0.1));
+            }
+            // a {
+              button {
+                span {
+                  img {}
+                }
+              }
+            // }// a - router 
+    
+            // a {
+              img {}
+            // }// a - router 
+    
+            // LoginTap 시작부분 
+            .LoginTapWrapper {
+            position: absolute;
+            left:-50px;
+              .LoginTap_none{
+                display: none;
+              }
+              .LoginTap {
+                background-color:rgb(156, 156, 156);
+                display: flex;
+                position: absolute;
+                width:180px;
+                height:50px;
+                text-align: center;
+                border-radius: 15px;
+                li {
+                  display: block;
+                  width:85px;
+                  margin-left:2px;
+                  line-height:50px;
+                }
+              }
+          
+            }// .LoginTapWrapper
+          }// .unb
+    
   }
-}
-
-.LoginTap{
-  position: fixed;
-  display: flex;
-  text-align: center;
-  top:70px; right:70px;
-  width:170px;
-  height:50px;
-  background-color: rgb(216, 216, 216);
-  color:black;
-  border-radius: 15px;
-  li{
-    line-height:45px;
-    margin-left:23px;
-  }
-  .triangle{
-    position: fixed;
-    top:47px; right:155px;
-    z-index:999;
-    width:0px;height:0px;
-    border-top:15px solid transparent;
-    border-bottom:20px solid  rgb(216, 216, 216);
-    border-right: 15px solid transparent;
-    border-left: 15px solid transparent;
-  }
-}
-.triangle{
-  position: fixed;
-  top:45px; right:155px;
-  z-index:999;
-  width:0px;height:0px;
-  border-top:15px solid transparent;
-  border-bottom:20px solid  rgb(216, 216, 216);
-  border-right: 15px solid transparent;
-  border-left: 15px solid transparent;
-}
-
-.LogoutTap{
-  position: fixed;
-  display: flex;
-  text-align: center;
-  top:70px; right:70px;
-  width:170px;
-  height:50px;
-  background-color: rgb(216, 216, 216);
-  color:black;
-  border-radius: 15px;
-  li{
-    line-height:45px;
-    margin-left:13px;
-  }
-}
-.triangle{
-  position: fixed;
-  top:47px; right:155px;
-  z-index:999;
-  width:0px;height:0px;
-  border-top:15px solid transparent;
-  border-bottom:20px solid  rgb(216, 216, 216);
-  border-right: 15px solid transparent;
-  border-left: 15px solid transparent;
 }
 
 
@@ -263,6 +240,14 @@
   }
 };
 
+// .LoginTapWrapper {
+//   .LoginTap {
+//     li {}
+//   }
+// }
+
+
+
 /* #headBox - tablet */ 
 @include tablet {
   #headBox {
@@ -364,3 +349,9 @@
     }
   }
 };
+
+// .LoginTapWrapper {
+//   .LoginTap {
+//     li {}
+//   }
+// }
